--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
             width: 120px;
             height: 120px;
             background-color: #eee;
-            border-radius: 50%;                /* 使圖片和框架為圓形 */
-            margin: 0 auto 20px;               /* 圖片居中並且與標題有間距 */
-            border: 4px solid #fff;            /* 給圓形框架添加白色邊框 */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 添加陰影效果 */
-            overflow: hidden;                  /* 讓圖片超出的部分隱藏 */
+            border-radius: 50%;               
+            margin: 0 auto 20px;             
+            border: 4px solid #fff;            
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+            overflow: hidden;               
         }
 
         header .photo img {
-            width: 100%;                        /* 讓圖片寬度充滿整個圓形 */
-            height: 100%;                       /* 讓圖片高度充滿圓形 */
-            object-fit: cover;                  /* 讓圖片填滿圓形並保持比例 */
+            width: 100%;                       
+            height: 100%;                      
+            object-fit: cover;               
         }
 
         header h1 {
@@ -311,7 +311,7 @@
         <!-- 標題 -->
         <header>
             <div class="photo">
-                <img src="個人照.png" alt="">
+                <img src="image/個人照.png" alt="">
             </div>
             <h1>林子庭</h1>
             <p>中原大學 資管二甲 11244145</p>
@@ -396,15 +396,15 @@
                 <h2>作品集</h2>
                 <div class="portfolio-gallery">
                     <figure>
-                        <img src="小痛 千千菟oc.jpg" alt="小痛-千千菟OC">
+                        <img src="image/小痛 千千菟oc.jpg" alt="小痛-千千菟OC">
                         <figcaption>小痛-千千菟OC</figcaption>
                     </figure>
                     <figure>
-                        <img src="2023新年賀圖夏無.png" alt="2023新年賀圖-夏無">
+                        <img src="image/2023新年賀圖夏無.png" alt="2023新年賀圖-夏無">
                         <figcaption>2023新年賀圖-夏無</figcaption>
                     </figure>
                     <figure>
-                        <img src="個人oc.png" alt="個人OC">
+                        <img src="image/個人oc.png" alt="個人OC">
                         <figcaption>個人OC</figcaption>
                     </figure>
                 </div>
@@ -417,11 +417,11 @@
             <article>
                 <h2>個人經歷</h2>
                 <div class="experience-item">
-                    <img src="熱舞社.jpg" alt="Experience 1">
+                    <img src="image/熱舞社.jpg" alt="Experience 1">
                     <p><a href="https://www.youtube.com/watch?v=lwXPHTx6ttA&t=100s" target="_blank">參與大學熱舞社 期初小成發</a></p>
                 </div>
                 <div class="experience-item">
-                    <img src="幼稚園.jpg" alt="Experience 2">
+                    <img src="image/幼稚園.jpg" alt="Experience 2">
                     <p>曾在烤肉店打工和幼稚園幫忙行政事務</p>
                 </div>
             </article>
@@ -433,22 +433,22 @@
                 <h2>更多照片</h2>
                 <div class="more-photos">
                     <figure>
-                        <img src="更多照片1.jpg" alt="更多照片1">
+                        <img src="image/更多照片1.jpg" alt="更多照片1">
                     </figure>
                     <figure>
-                        <img src="更多照片2.jpg" alt="更多照片2">
+                        <img src="image/更多照片2.jpg" alt="更多照片2">
                     </figure>
                     <figure>
-                        <img src="更多照片3.jpg" alt="更多照片3">
+                        <img src="image/更多照片3.jpg" alt="更多照片3">
                     </figure>
                     <figure>
-                        <img src="更多照片4.jpg" alt="更多照片4">
+                        <img src="image/更多照片4.jpg" alt="更多照片4">
                     </figure>
                     <figure>
-                        <img src="更多照片5.jpg" alt="更多照片5">
+                        <img src="image/更多照片5.jpg" alt="更多照片5">
                     </figure>
                     <figure>
-                        <img src="更多照片6.jpg" alt="更多照片6">
+                        <img src="image/更多照片6.jpg" alt="更多照片6">
                     </figure>
                 </div>
             </article>
