--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 <u1>
                     <li>T1 Keria</li>
                     <li>藤井 風</li>
-                    <li>SEVENTEEN nmixx</li> 
+                    <li>SEVENTEEN</li> 
                     <li>nmixx</li> 
                 </u1>
                 <p>主要玩的遊戲:</p>
