--- a/index.html
+++ b/index.html
@@ -334,21 +334,15 @@
                 <h2>關於我</h2>
                 <p>國小/國中/高中: 新北市私立裕德雙語高級中學<p></p>
                 <p>喜歡看漫畫、玩PC或是手遊、偶爾也會電繪創作。<p>
-                <p>各領域基本上都有涉及一點</p> 
+                <p>各領域基本上都有涉及一點，擅長跑步，高中曾有參與合球隊也有比賽，但因太晚加入導致無法有機會上場</p> 
                 <p>對設計相當有興趣 原想當插畫家 但科技的進展 發現需要學習更多資訊類的知識 故選擇資管系 增進知識 </p>
-                <p>喜歡的人事物: </p>
-                <u1>
-                    <li>T1 Keria</li>
-                    <li>藤井 風</li>
-                    <li>SEVENTEEN</li> 
-                    <li>nmixx</li> 
-                </u1>
-                <p>主要玩的遊戲:</p>
-                <u1>
-                    <li>League of Legends</li>
-                    <li>Valorant</li>
-                    <li>Eternal Return</li> 
-                    <li>Livly</li> 
+                <p>曾有去素描工作室體驗過，但應學校課業無法持續上課，但對各方面美術仍有興趣</p>
+                <p>有參與的校園活動及得獎</p>
+                 <u1>
+                    <li>高中組200公尺決賽-第一名</li>
+                    <li>高中組大隊接力-第一名</li> 
+                    <li>第36屆全國中正盃合球錦標賽 冠軍</li> 
+                    <li>第36屆全國中正盃合球錦標賽 冠軍</li>
                 </u1>
             </article>
         </section>
