--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@
                 <p>曾有去素描工作室體驗過，但應學校課業無法持續上課，但對各方面美術仍有興趣</p>
                 <p>有參與的校園活動及得獎</p>
                  <u1>
+                    <li>國中部106年第一學期數學學科競試成績優異</li>
+                    <li>國中部106年第一學期生物學科競試成績優異</li>
                     <li>高中組200公尺決賽-第一名</li>
                     <li>高中組大隊接力-第一名</li> 
                     <li>第36屆全國中正盃合球錦標賽 冠軍</li> 
