--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                         <img src="image/更多照片1.jpg" alt="更多照片1">
                     </figure>
                     <figure>
-                        <img src="image/更多照片2.jpg" alt="更多照片2">
+                        <img src="image/跑步得獎照.jpg" alt="更多照片2">
                     </figure>
                     <figure>
                         <img src="image/更多照片3.jpg" alt="更多照片3">
