--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 <h2>更多照片</h2>
                 <div class="more-photos">
                     <figure>
-                        <img src="image/更多照片1.jpg" alt="更多照片1">
+                        <img src="image/競試1.jpg" alt="更多照片1">
                     </figure>
                     <figure>
                         <img src="image/跑步得獎照.jpg" alt="更多照片2">
@@ -438,7 +438,7 @@
                         <img src="image/更多照片3.jpg" alt="更多照片3">
                     </figure>
                     <figure>
-                        <img src="image/更多照片4.jpg" alt="更多照片4">
+                        <img src="image/競試2.jpg" alt="更多照片4">
                     </figure>
                     <figure>
                         <img src="image/更多照片5.jpg" alt="更多照片5">
