--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                     <li>國中部106年第一學期生物學科競試成績優異</li>
                     <li>高中組200公尺決賽-第一名</li>
                     <li>高中組大隊接力-第一名</li> 
-                    <li>第36屆全國中正盃合球錦標賽 冠軍</li> 
+                    <li>第36屆全高中正盃合球錦標賽 冠軍</li> 
                 </u1>
             </article>
         </section>
