--- a/index.html
+++ b/index.html
@@ -353,17 +353,17 @@
             <article>
                 <h2>技能</h2>
                 <div class="skills-container">
-                    <div class="skill" data-percent="70">
+                    <div class="skill" data-percent="80">
                         <div class="skill-circle"></div>
                         <p>PYTHON</p>
                     </div>
-                    <div class="skill" data-percent="50">
+                    <div class="skill" data-percent="70">
                         <div class="skill-circle"></div>
                         <p>JAVA</p>
                     </div>
-                    <div class="skill" data-percent="80">
+                    <div class="skill" data-percent="70">
                         <div class="skill-circle"></div>
-                        <p>CLIP</p>
+                        <p>HTML</p>
                     </div>
                 </div>  
             </article>
