--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
                 <h2>關於我</h2>
                 <p>國小/國中/高中: 新北市私立裕德雙語高級中學<p></p>
                 <p>喜歡看漫畫、玩PC或是手遊、偶爾也會電繪創作。<p>
-                <p>各領域基本上都有涉及一點，擅長跑步，高中曾有參與合球隊也有比賽，但因太晚加入導致無法有機會上場</p> 
-                <p>對設計相當有興趣 原想當插畫家 但科技的進展 發現需要學習更多資訊類的知識 故選擇資管系 增進知識 </p>
-                <p>曾有去素描工作室體驗過，但應學校課業無法持續上課，但對各方面美術仍有興趣</p>
+                <p>各領域基本上都有涉及一點，擅長跑步，高中曾有參與合球隊也有比賽，但因太晚加入導致無法有機會上場。</p> 
+                <p>對設計相當有興趣，原想當插畫家，但科技的進展發現需要學習更多資訊類的知識，故選擇資管系增進知識。</p>
+                <p>曾有去素描工作室體驗過，但應學校課業無法持續上課，但對各方面美術仍有興趣。</p>
                 <p>有參與的校園活動及得獎</p>
                  <u1>
                     <li>國中部106年第一學期數學學科競試成績優異</li>
@@ -414,10 +414,12 @@
                 <div class="experience-item">
                     <img src="image/熱舞社.jpg" alt="Experience 1">
                     <p><a href="https://www.youtube.com/watch?v=lwXPHTx6ttA&t=100s" target="_blank">參與大學熱舞社 期初小成發</a></p>
+                    <p>在台下看似簡單，在台上卻是花費了3個月以上的心血以及努力，各組互相合作配合共同完成了一場演出，培養分工合作以及在台上的適應感。</p>
                 </div>
                 <div class="experience-item">
                     <img src="image/幼稚園.jpg" alt="Experience 2">
                     <p>曾在烤肉店打工和幼稚園幫忙行政事務</p>
+                    <p>趁著暑假閒餘去幼稚園幫忙處理文書工作，如在人手不足也會進班照顧小孩，為未來文書處理能力增加歷練。</p>
                 </div>
             </article>
         </section>
