--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@
                 </div>
                 <div class="experience-item">
                     <img src="image/幼稚園.jpg" alt="Experience 2">
-                    <p>曾在烤肉店打工和幼稚園幫忙行政事務</p>
-                    <p>趁著暑假閒餘去幼稚園幫忙處理文書工作，如在人手不足也會進班照顧小孩，為未來文書處理能力增加歷練。</p>
+                    <p>曾在烤肉店打工和幼稚園幫忙行政事務:趁著暑假閒餘去幼稚園幫忙處理文書工作，如在人手不足也會進班照顧小孩，為未來文書處理能力增加歷練。</p>
                 </div>
             </article>
         </section>
