--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
                 <h2>個人經歷</h2>
                 <div class="experience-item">
                     <img src="image/熱舞社.jpg" alt="Experience 1">
-                    <p><a href="https://www.youtube.com/watch?v=lwXPHTx6ttA&t=100s" target="_blank">參與大學熱舞社 期初小成發</a></p>
-                    <p>在台下看似簡單，在台上卻是花費了3個月以上的心血以及努力，各組互相合作配合共同完成了一場演出，培養分工合作以及在台上的適應感。</p>
+                    <p><a href="https://www.youtube.com/watch?v=lwXPHTx6ttA&t=100s" target="_blank">參與大學熱舞社 期初小成發:</a>在台下看似簡單，在台上卻是花費了3個月以上的心血以及努力，各組互相合作配合共同完成了一場演出，培養分工合作以及在台上的適應感。</p>
+                    <p></p>
                 </div>
                 <div class="experience-item">
                     <img src="image/幼稚園.jpg" alt="Experience 2">
